--- a/css/main.sass
+++ b/css/main.sass
@@ -1,1 +1,28 @@
-// 
+//
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap')
+@import "mixin/hover/hover.sass"
+@import "mixin/flex.sass"
+
+*,*::before,*::after
+  box-sizing: border-box
+  margin: 0
+  padding: 0
+  border: none
+  outline: none
+
+html
+  overflow-x: hidden
+
+body,p,a,span,h1,h2,h3,h4,h5,h6,button
+  font-family: 'Poppins', sans-serif
+
+.container
+  width: 1103px
+  padding-left: 15px
+  padding-right: 15px
+  margin: 0 auto
+
+.navigation
+  @include flexbox
+  background: red
