--- a/css/main.sass
+++ b/css/main.sass
@@ -60,9 +60,53 @@ body,p,a,span,h1,h2,h3,h4,h5,h6,button
       line-height: 18px
       color: #22262A
 
-
-
-
+header
+  width: 100%
+  height: 745px
+  background: url('../img/bg.png') no-repeat top center
+  @include flexbox
+  align-items: flex-end
+  justify-content: flex-end
+  .header__content
+    h3
+      color: #22262a
+      font-size: 18px
+      font-weight: 500
+      font-style: normal
+      letter-spacing: normal
+      line-height: normal
+      text-align: left
+      text-transform: uppercase
+    h1
+      color: #22262a
+      font-size: 80px
+      font-weight: 700
+      font-style: normal
+      letter-spacing: normal
+      line-height: normal
+      text-align: left
+      text-transform: uppercase
+    h4
+      color: #22262a
+      font-size: 18px
+      font-weight: 500
+      font-style: normal
+      letter-spacing: normal
+      line-height: normal
+      text-align: left
+    .header__buttons
+      button
+        width: 147px
+        height: 35px
+        color: #ffffff
+        background-color: #22262a
+        font-size: 18px
+        font-weight: 500
+        font-style: normal
+        letter-spacing: normal
+        line-height: normal
+        text-align: center
+        text-transform: uppercase
 
 
 
